@@ -1,0 +1,285 @@
+begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+
+begin_package
+DECL|package|org.apache.hadoop.hdfs.server.datanode
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|server
+operator|.
+name|datanode
+package|;
+end_package
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|conf
+operator|.
+name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|FileSystem
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|DFSConfigKeys
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|HdfsConfiguration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Test
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
+name|InetSocketAddress
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertEquals
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertNotEquals
+import|;
+end_import
+
+begin_class
+DECL|class|TestDataNodeUUID
+specifier|public
+class|class
+name|TestDataNodeUUID
+block|{
+comment|/**    * This test makes sure that we have a valid    * Node ID after the checkNodeUUID is done.    */
+annotation|@
+name|Test
+DECL|method|testDatanodeUuid ()
+specifier|public
+name|void
+name|testDatanodeUuid
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|InetSocketAddress
+name|NN_ADDR
+init|=
+operator|new
+name|InetSocketAddress
+argument_list|(
+literal|"localhost"
+argument_list|,
+literal|5020
+argument_list|)
+decl_stmt|;
+name|Configuration
+name|conf
+init|=
+operator|new
+name|HdfsConfiguration
+argument_list|()
+decl_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_DATANODE_ADDRESS_KEY
+argument_list|,
+literal|"0.0.0.0:0"
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_DATANODE_HTTP_ADDRESS_KEY
+argument_list|,
+literal|"0.0.0.0:0"
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_DATANODE_IPC_ADDRESS_KEY
+argument_list|,
+literal|"0.0.0.0:0"
+argument_list|)
+expr_stmt|;
+name|FileSystem
+operator|.
+name|setDefaultUri
+argument_list|(
+name|conf
+argument_list|,
+literal|"hdfs://"
+operator|+
+name|NN_ADDR
+operator|.
+name|getHostName
+argument_list|()
+operator|+
+literal|":"
+operator|+
+name|NN_ADDR
+operator|.
+name|getPort
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ArrayList
+argument_list|<
+name|StorageLocation
+argument_list|>
+name|locations
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|DataNode
+name|dn
+init|=
+operator|new
+name|DataNode
+argument_list|(
+name|conf
+argument_list|,
+name|locations
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+comment|//Assert that Node iD is null
+name|String
+name|nullString
+init|=
+literal|null
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|dn
+operator|.
+name|getDatanodeUuid
+argument_list|()
+argument_list|,
+name|nullString
+argument_list|)
+expr_stmt|;
+comment|// CheckDataNodeUUID will create an UUID if UUID is null
+name|dn
+operator|.
+name|checkDatanodeUuid
+argument_list|()
+expr_stmt|;
+comment|// Make sure that we have a valid DataNodeUUID at that point of time.
+name|assertNotEquals
+argument_list|(
+name|dn
+operator|.
+name|getDatanodeUuid
+argument_list|()
+argument_list|,
+name|nullString
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+end_class
+
+end_unit
+
